# dockly

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: renovate.json
.github/workflows/: ci.yml  consumer-smoke-petclinic.yml  release-please.yml
action/: README.md  action.yml
cli/: README.md
docs/: POSITIONING.md  adopt.md  architecture.md  benchmarks.md  capabilities.md  contributing-strategies.md  extensions.md  index.html  jvm.md  migration-springdocker.md  native-aot.md  plugin-facts.md  project-detection.md  project-facts.md  security.md  strategies.md  troubleshooting.md
docs/adr/: 0001-plugin-architecture.md  0002-benchmark-methodology-boundaries.md  0003-dockerfile-generation-philosophy.md  0004-sample-project-strategy.md  0005-config-first-dockerfile-generation.md  0006-pypi-first-distribution.md  0007-jlink-baseline-modules-web-detection.md  0008-target-audience.md  0009-external-sample-repository.md  0010-pom-gradle-ssot-java-builder.md  0011-dockly-product-vision.md  README.md
docs/examples/: README.md  benchmark-report.json  benchmark-trends.json  distroless.Dockerfile  jlink.Dockerfile  layered.Dockerfile
docs/examples/distribution/: README.md  homebrew-formula.rb  scoop-manifest.json  standalone-binary.sh
docs/examples/extensions/: custom_dockerfile_mutator.py  custom_project_detector.py  custom_recipe.py  gradle_monorepo_project_detector.py  maven_reactor_project_detector.py
docs/examples/observability/: README.md
docs/internal/: typing.md
docs/presentation/: README.md  docker-steps-evidence.html  java-spring-docker-techniques.html  springdocker-features.html
docs/presentation/assets/: evidence-deck.css
integrations/gradle-plugin/: README.md  build.gradle.kts  settings.gradle.kts
integrations/maven-plugin/: PUBLISHING.md  README.md  pom.xml
samples/: README.md  java-spring-docker
scripts/: benchmark_presentation_summary.py  checkout_sample.py  consumer_smoke_petclinic.manifest.json  consumer_smoke_petclinic.py  docker_smoke_build.py  java_spring_docker_sample.manifest.json  presentation_benchmark_lib.py  seed_presentation_benchmark_bindings.py  update_presentation_benchmarks.py  verify_digest_pins.py
src/dockly/: __init__.py  analyze.py  ci_workflow.py  cli.py  commands.py  config.py  config_audit.py  config_serializer.py  configure_wizard.py  digest_pins.py  dockerfile.py  dockerfile_explain.py  dockerfile_profiles.py  gradle_descriptors.py  java_features.py  plugins.py  project_detect.py  project_facts.py  regression.py  runtime_images.py  strategy.py
src/dockly/benchmarks/: generate.py  runner.py
src/dockly/services/: benchmark_service.py  dockerfile_service.py  project_service.py  verify_service.py
src/dockly/templates/: github_dockerfile_workflow.yml.j2
src/springdocker/: __init__.py  ci_workflow.py  cli.py  commands.py  compare.py  config.py  config_audit.py  config_serializer.py  configure_wizard.py  digest_pins.py  dockerfile.py  dockerfile_explain.py  dockerfile_profiles.py  java_features.py  project_detect.py
src/springdocker/benchmarks/: generate.py  runner.py
src/springdocker/services/: dockerfile_service.py  verify_service.py
src/springdocker/templates/: github_dockerfile_workflow.yml.j2
tests/benchmark/: test_analyze.py  test_commands_analyze.py  test_commands_compare.py  test_compare.py  test_dockerfile_snapshots.py  test_generate.py  test_regression.py  test_runner.py
tests/e2e/: test_integration_cli_flows.py
tests/fixtures/gradle-kts-only/: build.gradle.kts  settings.gradle.kts
tests/fixtures/plain-java-gradle/: build.gradle  gradlew
tests/fixtures/plain-java-maven/: pom.xml
tests/integration/: test_commands_explain.py  test_commands_inspect.py  test_commands_verify.py  test_internal_flows.py
tests/snapshots/dockerfile/: distroless.Dockerfile  gradle-kts-minimal.Dockerfile  gradle-minimal.Dockerfile  maven-default.Dockerfile  maven-must-have.Dockerfile
tests/unit/: test_capability_gating.py  test_ci_workflow.py  test_cli_parse.py  test_config.py  test_config_serializer.py  test_configure_wizard.py  test_consumer_smoke_petclinic.py  test_digest_pins.py  test_dockerfile_explain.py  test_dockerfile_profiles.py  test_dockerfile_templates.py  test_init.py  test_java_features.py  test_plugins.py  test_presentation_benchmark_lib.py  test_project_detect.py  test_project_facts.py  test_runtime_images.py  test_services_benchmark.py  test_services_dockerfile.py  test_services_verify.py  test_setup.py  test_strategy.py
(+36 files in other folders)
